--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.X {
+  font-size: 6rem;
+  color: red; 
+}
+
+.O {
+  font-size: 6rem;
+  color: green;
+}
+
+.activeT {
+  background-color: white;
+  position: relative;
+}
+
+.activeT::before {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  left: 0;
+  bottom: 0;
+  border-radius: 50%;
+  transform: translateX(-100%);
+  box-shadow: 10px 10px 0 0 white;
+}
+
+.activeT::after {
+  content: '';
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  right: 0;
+  bottom: 0;
+  border-radius: 50%;
+  transform: translateX(100%);
+  box-shadow: -10px 10px 0 0 white;
+}
